src/test/ui/parser/issue-84117.stderr
error: expected one of `>`, a const expression, lifetime, or type, found `}`
  --> $DIR/issue-84117.rs:2:67
   |
LL |     let outer_local:e_outer<&str, { let inner_local:e_inner<&str, }
   |                                         ------------              ^ expected one of `>`, a const expression, lifetime, or type
   |                                         |          |
   |                                         |          help: use `=` if you meant to assign
   |                                         while parsing the type for `inner_local`

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
  --> $DIR/issue-84117.rs:2:65
   |
LL |     let outer_local:e_outer<&str, { let inner_local:e_inner<&str, }
   |                                                                 ^ expected one of 8 possible tokens

error: expected one of `,`, `:`, `=`, or `>`, found `}`
  --> $DIR/issue-84117.rs:8:1
   |
LL |     let outer_local:e_outer<&str, { let inner_local:e_inner<&str, }
   |         ------------ help: use `=` if you meant to assign          - expected one of `,`, `:`, `=`, or `>`
   |         |
   |         while parsing the type for `outer_local`
...
LL | }
   | ^ unexpected token

error: expected one of `>`, a const expression, lifetime, or type, found `}`
  --> $DIR/issue-84117.rs:2:67
   |
LL |     let outer_local:e_outer<&str, { let inner_local:e_inner<&str, }
   |                                         ------------              ^ expected one of `>`, a const expression, lifetime, or type
   |                                         |          |
   |                                         |          help: use `=` if you meant to assign
   |                                         while parsing the type for `inner_local`

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
  --> $DIR/issue-84117.rs:2:65
   |
LL |     let outer_local:e_outer<&str, { let inner_local:e_inner<&str, }
   |                                                                 ^ expected one of 8 possible tokens

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
  --> $DIR/issue-84117.rs:2:33
   |
LL |     let outer_local:e_outer<&str, { let inner_local:e_inner<&str, }
   |                                 ^ expected one of 8 possible tokens

error: aborting due to 6 previous errors

